--- a/IA-SapiensSAT/pom.xml
+++ b/IA-SapiensSAT/pom.xml
@@ -77,25 +77,25 @@
 			</plugin>
 
 
-	<!-- <plugin> -->
-	<!-- <groupId>org.codehaus.mojo</groupId> -->
-	<!-- <artifactId>exec-maven-plugin</artifactId> -->
-	<!-- <version>1.2.1</version> -->
-	<!-- <executions> -->
-	<!-- <execution> -->
-	<!-- <goals> -->
-	<!-- <goal>java</goal> -->
-	<!-- </goals> -->
-	<!-- </execution> -->
-	<!-- </executions> -->
-	<!-- <configuration> -->
-	<!-- <mainClass>com.test</mainClass> -->
-	<!-- <arguments> -->
-	<!-- <argument>foo</argument> -->
-	<!-- <argument>bar</argument> -->
-	<!-- </arguments> -->
-	<!-- </configuration> -->
-	<!-- </plugin> -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.codehaus.mojo</groupId> -->
+			<!-- <artifactId>exec-maven-plugin</artifactId> -->
+			<!-- <version>1.2.1</version> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <goals> -->
+			<!-- <goal>java</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- <configuration> -->
+			<!-- <mainClass>com.test</mainClass> -->
+			<!-- <arguments> -->
+			<!-- <argument>foo</argument> -->
+			<!-- <argument>bar</argument> -->
+			<!-- </arguments> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 
 
 		</plugins>
@@ -156,6 +156,14 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.3</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 
 
 	</dependencies>
